--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>圖片編排工具</title>
+  <title>2026WBC樹狀圖修改</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     /* 固定畫布真實尺寸 (以 1200px 為基準)，但在小螢幕上仍會縮放 */
@@ -13,12 +13,19 @@
     #placed-layer{ position:absolute; left:0; top:0; width:100%; height:100%; pointer-events:none; }
     .placed-card{ position:absolute; pointer-events:auto; user-select:none; touch-action:none; cursor:grab; }
     .card-list{ -webkit-overflow-scrolling:touch; }
+    /* 小螢幕優化：縮短內距以防止選單溢出 */
+    @media (max-width: 640px){
+      body{ padding:12px; }
+      #canvas-root{ padding-left:8px; padding-right:8px; }
+      #canvas{ border-width:1px; }
+      /* 縮小上下控制區間距，減少整體高度佔用 */
+      .max-w-5xl > .space-y-4 > *{ padding-top:6px; padding-bottom:6px; }
+    }
   </style>
 </head>
 <body class="bg-slate-50 text-slate-800 p-6">
   <div class="max-w-5xl mx-auto space-y-4">
-    <h1 class="text-lg font-semibold text-slate-900 mb-3">圖片編排工具</h1>
-
+    <h1 class="text-lg font-semibold text-slate-900 mb-3">2026WBC樹狀圖修改</h1>
     <div class="bg-white border border-slate-200 rounded-xl shadow-sm p-4">
       <!-- Canvas 區 -->
       <div id="canvas-root" class="">
@@ -31,10 +38,11 @@
 
     <!-- Controls card -->
     <div class="bg-white border border-slate-200 rounded-xl shadow-sm p-4 space-y-4">
+      <h2 class="text-lg font-semibold text-slate-900 mb-3">控制器區塊</h2>
       <div class="flex gap-2">
         <label class="flex-1">
           <input id="base-file" type="file" accept="image/*" class="hidden" />
-          <button id="choose-base" class="w-full bg-slate-900 text-white hover:bg-slate-800 rounded-lg px-4 py-2">選擇/載入底圖</button>
+          <button id="choose-base" class="w-full bg-slate-900 text-white hover:bg-slate-800 rounded-lg px-4 py-2">選擇／拖曳到底圖區</button>
         </label>
         <button id="download-btn" class="bg-slate-900 text-white hover:bg-slate-800 rounded-lg px-4 py-2">下載 PNG</button>
         <button id="clear-all" class="bg-rose-600 text-white hover:bg-rose-700 rounded-lg px-4 py-2">清除畫布</button>
@@ -64,10 +72,10 @@
 
       <!-- 狀態按鈕：對已選卡片設定晉級/未晉級 -->
       <div class="flex gap-2 items-center">
-        <div class="text-sm text-slate-700 w-20">狀態：</div>
+        <div class="text-sm text-slate-700 w-20">切換狀態：</div>
         <div class="flex items-center gap-2">
-          <button id="set-adv" class="bg-white border border-slate-200 hover:bg-slate-50 rounded-lg px-4 py-2 text-sm">設定為：晉級</button>
-          <button id="set-elim" class="bg-white border border-slate-200 hover:bg-slate-50 rounded-lg px-4 py-2 text-sm">設定為：未晉級</button>
+          <button id="set-adv" class="bg-white border border-slate-200 hover:bg-slate-50 rounded-lg px-4 py-2 text-sm">設定晉級</button>
+          <button id="set-elim" class="bg-white border border-slate-200 hover:bg-slate-50 rounded-lg px-4 py-2 text-sm">設定未晉級</button>
           <button id="set-clear" class="bg-white border border-slate-200 hover:bg-slate-50 rounded-lg px-4 py-2 text-sm">清除狀態</button>
         </div>
       </div>
@@ -75,7 +83,7 @@
 
     <!-- 卡片清單卡片 -->
     <div class="bg-white border border-slate-200 rounded-xl shadow-sm p-4">
-      <div class="mb-2 text-sm text-slate-700">下方為隊伍卡片（全部展開），將卡片拖曳到上方畫布並放開以放置。</div>
+      <div class="mb-2 text-sm text-slate-700">下方為隊伍卡片（全部展開），PC直接拖曳卡片到上方畫布，手機點兩下再操作。</div>
 
       <!-- 手動產生卡片 -->
       <div class="mb-3 flex gap-2 items-center">
