--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
           <!-- 隊旗縮放 -->
           <div class="flex flex-wrap gap-2 items-center">
             <div class="text-sm text-slate-700 w-20 shrink-0">隊旗縮放：</div>
-            <input id="flag-scale" type="range" min="40" max="120" value="80" class="w-56 max-w-full" />
-            <div id="flag-scale-label" class="text-sm text-slate-700 whitespace-nowrap">80%</div>
+            <input id="flag-scale" type="range" min="40" max="120" value="90" class="w-56 max-w-full" />
+            <div id="flag-scale-label" class="text-sm text-slate-700 whitespace-nowrap">90%</div>
           </div>
 
           <!-- 方向鍵 + 倍率 -->
@@ -269,6 +269,7 @@
     </div>
   </div>
 
-</div>
+<script src="assets/main.js"></script>
+
 </body>
 </html>
