--- a/index.html
+++ b/index.html
@@ -257,12 +257,12 @@
   <div class="bg-white border border-slate-200 rounded-xl shadow-sm p-4 max-w-5xl mx-auto mt-4">
 <h2 class="text-sm font-medium text-slate-900">賽程資訊（預留區）</h2>
     <div class="mt-2 text-sm text-slate-600">
-      之後可在此嵌入賽程開框／比分資訊（目前先用測試 iframe）。
+      嵌入賽程開框／比分資訊（目前先用測試 iframe）。
     </div>
 
     <div class="mt-3 border border-slate-200 rounded-lg overflow-hidden">
     <iframe
-      src="https://beta-www.ettoday.net/events/_weichi/2026wbc/iframe/iframe_2023.htm"
+      src="https://events.ettoday.net/wbc2026/web/iframe/iframe_2026.php7"
       class="w-full iframe-schedule"
       loading="lazy"
     ></iframe>
@@ -273,3 +273,4 @@
 
 </body>
 </html>
+
