--- a/index.html
+++ b/index.html
@@ -174,6 +174,9 @@
         <button id="set-clear" class="bg-white border border-slate-200 hover:bg-slate-50 rounded-lg px-4 py-2 text-sm whitespace-nowrap shrink-0">
           清除狀態
         </button>
+        <button id="toggle-auto-place" class="bg-white border border-slate-200 hover:bg-slate-50 rounded-lg px-4 py-2 text-sm whitespace-nowrap shrink-0">
+          自動放置：OFF
+        </button>
       </div>
 
       <hr class="my-3 border-slate-200"/>
@@ -257,12 +260,12 @@
   <div class="bg-white border border-slate-200 rounded-xl shadow-sm p-4 max-w-5xl mx-auto mt-4">
 <h2 class="text-sm font-medium text-slate-900">賽程資訊（預留區）</h2>
     <div class="mt-2 text-sm text-slate-600">
-      嵌入賽程開框／比分資訊（目前先用測試 iframe）。
+      之後可在此嵌入賽程開框／比分資訊（目前先用測試 iframe）。
     </div>
 
     <div class="mt-3 border border-slate-200 rounded-lg overflow-hidden">
     <iframe
-      src="https://events.ettoday.net/wbc2026/web/iframe/iframe_2026.php7"
+      src="https://beta-www.ettoday.net/events/_weichi/2026wbc/iframe/iframe_2023.htm"
       class="w-full iframe-schedule"
       loading="lazy"
     ></iframe>
@@ -270,7 +273,7 @@
   </div>
 
 <script src="assets/main.js"></script>
+<script src="assets/slot-detector.js"></script>
 
 </body>
 </html>
-
