--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 
     <div class="mt-3 border border-slate-200 rounded-lg overflow-hidden">
     <iframe
-      src="https://beta-www.ettoday.net/events/_weichi/2026wbc/iframe/iframe_2023.htm"
+      src="https://mevents.ettoday.net/wbc2026/web/iframe/iframe_2026.htm"
       class="w-full iframe-schedule"
       loading="lazy"
     ></iframe>
@@ -277,3 +277,4 @@
 
 </body>
 </html>
+
